Fix images overflowing in notes on screens lower than 720px in width

--- a/src/assets/css/melissa.css
+++ b/src/assets/css/melissa.css
@@ -240,7 +240,7 @@
    object-fit: contain;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 520px) {
    .melissa .info .uploadedImg {
       margin: 0px;
       max-width: 100%;
